--- a/index.html.html
+++ b/index.html.html
@@ -11,7 +11,8 @@
 
     <button onclick="playAudio()">abusive</button>
 
-    <audio id="audioPlayer" controls style="display:none;">
+    <!-- The audio player is now visible (removed display:none) -->
+    <audio id="audioPlayer" controls>
         <source src="Audio%20files/abusive.mp3" type="audio/mp3">
         Your browser does not support the audio element.
     </audio>
