--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
   <h1>Click the Button to Play Audio</h1>
   
-  <button onclick="playAudio()">Play "abusive"</button>
+  <button onclick="playAudio()">abusive</button>
   
   <audio id="audio" src="audio_files/abusive.mp3"></audio>
   
