--- a/index.html
+++ b/index.html
@@ -3,127 +3,167 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>A-Z Vocabulary List</title>
+  <title>Alphabetical Words Display</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      padding: 20px;
+      margin: 0;
+      padding: 0;
+      display: flex;
     }
-    .alphabet {
+
+    #alphabet {
+      width: 100px;
+      padding: 20px;
+      border-right: 2px solid #ddd;
+      background-color: #f4f4f4;
+    }
+
+    #alphabet button {
+      display: block;
+      margin: 5px 0;
+      font-size: 18px;
+      cursor: pointer;
+      background-color: #333;
+      color: white;
+      border: none;
+      padding: 10px;
+      width: 100%;
+    }
+
+    #alphabet button:hover {
+      background-color: #555;
+    }
+
+    #words-container {
+      flex-grow: 1;
+      padding: 20px;
+      overflow-y: auto;
+    }
+
+    .word-list {
       display: flex;
       flex-direction: column;
-      align-items: flex-start;
-      margin-bottom: 20px;
+      margin-top: 20px;
     }
-    .alphabet button {
-      margin: 5px;
-      padding: 10px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-    .word-list {
-      margin-left: 20px;
-      margin-top: 10px;
-    }
-    .word-list li {
+
+    .word-list button {
+      font-size: 18px;
+      padding: 8px 16px;
       margin: 5px 0;
+      cursor: pointer;
+      background-color: #ddd;
+      color: #333;
+      border: none;
     }
-    .hidden {
-      display: none;
+
+    .word-list button:hover {
+      background-color: #bbb;
     }
   </style>
 </head>
 <body>
-  <h1>A-Z Vocabulary List</h1>
-  
-  <div class="alphabet">
-    <button onclick="toggleWords('A')">A</button>
-    <button onclick="toggleWords('B')">B</button>
-    <button onclick="toggleWords('C')">C</button>
-    <button onclick="toggleWords('D')">D</button>
-    <button onclick="toggleWords('E')">E</button>
-    <button onclick="toggleWords('F')">F</button>
-    <button onclick="toggleWords('G')">G</button>
-    <button onclick="toggleWords('H')">H</button>
-    <button onclick="toggleWords('I')">I</button>
-    <button onclick="toggleWords('J')">J</button>
-    <button onclick="toggleWords('K')">K</button>
-    <button onclick="toggleWords('L')">L</button>
-    <button onclick="toggleWords('M')">M</button>
-    <button onclick="toggleWords('N')">N</button>
-    <button onclick="toggleWords('O')">O</button>
-    <button onclick="toggleWords('P')">P</button>
-    <button onclick="toggleWords('Q')">Q</button>
-    <button onclick="toggleWords('R')">R</button>
-    <button onclick="toggleWords('S')">S</button>
-    <button onclick="toggleWords('T')">T</button>
-    <button onclick="toggleWords('U')">U</button>
-    <button onclick="toggleWords('V')">V</button>
-    <button onclick="toggleWords('W')">W</button>
-    <button onclick="toggleWords('X')">X</button>
-    <button onclick="toggleWords('Y')">Y</button>
-    <button onclick="toggleWords('Z')">Z</button>
+
+  <div id="alphabet">
+    <button onclick="showWords('A')">A</button>
+    <button onclick="showWords('B')">B</button>
+    <button onclick="showWords('C')">C</button>
+    <button onclick="showWords('D')">D</button>
+    <button onclick="showWords('E')">E</button>
+    <button onclick="showWords('F')">F</button>
+    <button onclick="showWords('G')">G</button>
+    <button onclick="showWords('H')">H</button>
+    <button onclick="showWords('I')">I</button>
+    <button onclick="showWords('J')">J</button>
+    <button onclick="showWords('K')">K</button>
+    <button onclick="showWords('L')">L</button>
+    <button onclick="showWords('M')">M</button>
+    <button onclick="showWords('N')">N</button>
+    <button onclick="showWords('O')">O</button>
+    <button onclick="showWords('P')">P</button>
+    <button onclick="showWords('Q')">Q</button>
+    <button onclick="showWords('R')">R</button>
+    <button onclick="showWords('S')">S</button>
+    <button onclick="showWords('T')">T</button>
+    <button onclick="showWords('U')">U</button>
+    <button onclick="showWords('V')">V</button>
+    <button onclick="showWords('W')">W</button>
+    <button onclick="showWords('X')">X</button>
+    <button onclick="showWords('Y')">Y</button>
+    <button onclick="showWords('Z')">Z</button>
   </div>
 
-  <!-- Word lists for each letter -->
-  <div class="word-list" id="A-words" class="hidden"></div>
-  <div class="word-list" id="B-words" class="hidden"></div>
-  <div class="word-list" id="C-words" class="hidden"></div>
-  <div class="word-list" id="D-words" class="hidden"></div>
-  <div class="word-list" id="E-words" class="hidden"></div>
-  <div class="word-list" id="F-words" class="hidden"></div>
-  <div class="word-list" id="G-words" class="hidden"></div>
-  <div class="word-list" id="H-words" class="hidden"></div>
-  <div class="word-list" id="I-words" class="hidden"></div>
-  <div class="word-list" id="J-words" class="hidden"></div>
-  <div class="word-list" id="K-words" class="hidden"></div>
-  <div class="word-list" id="L-words" class="hidden"></div>
-  <div class="word-list" id="M-words" class="hidden"></div>
-  <div class="word-list" id="N-words" class="hidden"></div>
-  <div class="word-list" id="O-words" class="hidden"></div>
-  <div class="word-list" id="P-words" class="hidden"></div>
-  <div class="word-list" id="Q-words" class="hidden"></div>
-  <div class="word-list" id="R-words" class="hidden"></div>
-  <div class="word-list" id="S-words" class="hidden"></div>
-  <div class="word-list" id="T-words" class="hidden"></div>
-  <div class="word-list" id="U-words" class="hidden"></div>
-  <div class="word-list" id="V-words" class="hidden"></div>
-  <div class="word-list" id="W-words" class="hidden"></div>
-  <div class="word-list" id="X-words" class="hidden"></div>
-  <div class="word-list" id="Y-words" class="hidden"></div>
-  <div class="word-list" id="Z-words" class="hidden"></div>
+  <div id="words-container">
+    <div id="words-list"></div>
+  </div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.3/xlsx.full.min.js"></script>
   <script>
-    function toggleWords(letter) {
-      // Hide all word lists
-      const allWordLists = document.querySelectorAll('.word-list');
-      allWordLists.forEach(list => list.classList.add('hidden'));
+    let wordsData = [];  // Store the words data
 
-      // Show the selected letter's word list
-      const wordList = document.getElementById(`${letter}-words`);
-      wordList.classList.remove('hidden');
-
-      // Get words from the Excel sheet (this is just a placeholder, you will need actual data fetching code here)
-      const words = getWordsForLetter(letter); // Replace with actual data fetching code from the Excel
-
-      // Create and append the word list
-      wordList.innerHTML = '';
-      words.forEach(word => {
-        const listItem = document.createElement('li');
-        listItem.textContent = word;
-        wordList.appendChild(listItem);
+    // Load Excel file and process it
+    fetch('https://github.com/BoydYang-Designer/English-vocabulary/raw/refs/heads/main/Z_total_words.xlsx')
+      .then(response => response.arrayBuffer())
+      .then(data => {
+        const workbook = XLSX.read(data, { type: 'array' });
+        const worksheet = workbook.Sheets['NewWords'];
+        wordsData = XLSX.utils.sheet_to_json(worksheet, { header: 1 });
       });
+
+    // Function to display words for a selected letter
+    function showWords(letter) {
+      const wordsList = document.getElementById('words-list');
+      wordsList.innerHTML = '';  // Clear previous list
+
+      // Filter words that start with the selected letter
+      const wordsForLetter = wordsData.filter(row => row[2] && row[2].startsWith(letter));
+      
+      // Create a list of words for the selected letter
+      const wordListDiv = document.createElement('div');
+      wordListDiv.classList.add('word-list');
+
+      wordsForLetter.forEach(row => {
+        const wordButton = document.createElement('button');
+        wordButton.textContent = row[2];  // C列的單字
+        wordButton.onclick = () => {
+          playAudio(row[2].toLowerCase());
+          showTraditionalChinese(row[5]);
+          showEnglishMeaning(row[6]);
+        };
+        wordListDiv.appendChild(wordButton);
+      });
+
+      wordsList.appendChild(wordListDiv);
     }
 
-    // Placeholder function to get words from a specific letter
-    function getWordsForLetter(letter) {
-      const words = {
-        A: ['abusive', 'apple', 'advance'],
-        B: ['banana', 'brave', 'bake'],
-        C: ['cat', 'city', 'courage'],
-        // Add more words as needed
-      };
-      return words[letter] || [];
+    // Play audio for the selected word
+    function playAudio(word) {
+      const audio = new Audio(`audio_files/${word}.mp3`);
+      audio.play();
+    }
+
+    // Show Traditional Chinese translation
+    function showTraditionalChinese(translation) {
+      const container = document.getElementById('words-list');
+      let chineseDiv = document.getElementById('traditional-chinese');
+      if (!chineseDiv) {
+        chineseDiv = document.createElement('div');
+        chineseDiv.id = 'traditional-chinese';
+        container.appendChild(chineseDiv);
+      }
+      chineseDiv.textContent = `Traditional Chinese: ${translation}`;
+    }
+
+    // Show English meaning
+    function showEnglishMeaning(meaning) {
+      const container = document.getElementById('words-list');
+      let meaningDiv = document.getElementById('english-meaning');
+      if (!meaningDiv) {
+        meaningDiv = document.createElement('div');
+        meaningDiv.id = 'english-meaning';
+        container.appendChild(meaningDiv);
+      }
+      meaningDiv.textContent = `English Meaning: ${meaning}`;
     }
   </script>
 </body>
