--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boyd Vocabulary Explorer</title>
+    <title>Boyd Vocabulary</title>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; }
         .letter-btn { margin: 5px; padding: 10px; cursor: pointer; }
@@ -74,7 +74,7 @@
     </script>
 </head>
 <body>
-    <h1>Vocabulary Explorer</h1>
+    <h1>Boyd Vocabulary</h1>
     <div id="letters">
         <script>
             document.write("ABCDEFGHIJKLMNOPQRSTUVWXYZ".split("").map(letter => `<button class='letter-btn' onclick='showWords("${letter.toLowerCase()}")'>${letter}</button>`).join(" "));
